--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-vector-icons": "^10.1.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "expo-updates": "~0.25.19"
+    "expo-updates": "~0.25.19",
+    "expo-dev-client": "~4.0.20"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
