--- a/package.json
+++ b/package.json
@@ -15,23 +15,24 @@
     "expo": "^51.0.20",
     "expo-av": "~14.0.6",
     "expo-camera": "~15.0.13",
+    "expo-dev-client": "~4.0.20",
     "expo-file-system": "~17.0.1",
     "expo-location": "~17.0.1",
     "expo-mail-composer": "~13.0.1",
     "expo-media-library": "~16.0.4",
     "expo-sensors": "~13.0.9",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.19",
     "expo-video-thumbnails": "~8.0.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-maps": "1.14.0",
     "react-native-paper": "^5.12.3",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
-    "expo-updates": "~0.25.19",
-    "expo-dev-client": "~4.0.20"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
