--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-maps": "1.14.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.8",
+    "react-native-svg": "^15.4.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0",
     "react-navigation": "^4.4.4",
